--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,13 @@
   "minimum-stability": "stable",
   "autoload": {
     "psr-4" : {"WND\\SMVCF\\" : "src/"}
+  },
+  "require": {
+    "symfony/dependency-injection": "~2.6",
+    "symfony/form": "~2.6",
+    "symfony/http-foundation": "~2.6",
+    "symfony/templating": "~2.6",
+    "symfony/validator": "~2.6",
+    "symfony/yaml": "~2.6"
   }
 }
