--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "symfony/http-foundation": "~2.6",
     "symfony/templating": "~2.6",
     "symfony/validator": "~2.6",
-    "symfony/yaml": "~2.6"
+    "symfony/yaml": "~2.6",
+    "doctrine/orm": "~2.4"
   }
 }
