--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     "symfony/templating": "~2.6",
     "symfony/validator": "~2.6",
     "symfony/yaml": "~2.6",
-    "doctrine/orm": "~2.4"
+    "doctrine/orm": "~2.4",
+    "symfony/config": "~2.6"
   }
 }
