--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "symfony/validator": "~2.6",
     "symfony/yaml": "~2.6",
     "doctrine/orm": "~2.4",
-    "symfony/config": "~2.6"
+    "symfony/config": "~2.6",
+    "symfony/security": "~2.6"
   }
 }
