--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,20 @@
     "symfony/yaml": "~2.6",
     "doctrine/orm": "~2.4",
     "symfony/config": "~2.6",
-    "symfony/security": "~2.6"
+    "symfony/security": "~2.6",
+    "incenteev/composer-parameter-handler": "~2.0"
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+    ],
+    "post-update-cmd": [
+      "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
+    ]
+  },
+  "extra": {
+    "incenteev-parameters": {
+      "file": "config/config.yml"
+    }
   }
 }
